--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,9 @@ android {
 }
 
 greendao {
-    schemaVersion 1
-    daoPackage 'com.example.greendaotest.db.greendao'
-    targetGenDir 'src/main/java'
+    schemaVersion 2 //数据库版本号
+    daoPackage 'com.example.greendaotest.db.greendao' //greenDao 自动生成的代码保存的包名
+    targetGenDir 'src/main/java' //自动生成的代码存储的路径
 }
 
 dependencies {
